# Graphaskell

./: .gitignore  README.md  graphaskell.cabal
app/: AppError.hs  Main.hs
examples/: grafo-componentes.txt  grafo-disconnected.txt  grafo-lp-comunidades.txt  grafo-pagerank.txt  grafo-simple.txt  grafo-weighted.txt
src/Algorithm/: BFS.hs  BellmanFord.hs  Common.hs  ConnectedComponents.hs  DFS.hs  Dijkstra.hs  Error.hs  LabelPropagation.hs  Log.hs  Messages.hs  Name.hs  Observability.hs  PageRank.hs  Result.hs  Spec.hs  State.hs  Types.hs
src/Cli/: Error.hs  Options.hs
src/Graph/: Describe.hs  Load.hs  ParseError.hs  Parser.hs  Reading.hs  Types.hs  Validation.hs  ValidationError.hs  VertexContext.hs
src/Output/: Log.hs  Result.hs  Run.hs  Trace.hs
src/Pregel/: Engine.hs  Env.hs  Error.hs  Loop.hs  Pool.hs  Superstep.hs  Types.hs
src/Util/: Reading.hs
test/: AlgorithmTests.hs  CommonTests.hs  Fixtures.hs  Main.hs  PageRankOracle.hs  ParserTests.hs  PropertyTests.hs  SequentialEngine.hs  SomePregelRun.hs  SuperstepTests.hs  TestSupport.hs  TraceTests.hs
