cabal-version: 3.0
name:          graphaskell
version:       0.1.0.0
build-type:    Simple

common exe-warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

common lib-deps
    build-depends:
        base,
        async,
        containers,
        optparse-applicative,
        stm

library
    import:           lib-deps
    ghc-options:      -Wall
    exposed-modules:
        Algorithm.BFS,
        Algorithm.BellmanFord,
        Algorithm.Common,
        Algorithm.ConnectedComponents,
        Algorithm.Error,
        Algorithm.LabelPropagation,
        Algorithm.PageRank,
        Algorithm.Spec,
        Algorithm.Types,
        Cli.Options,
        Graph.ParseError,
        Graph.Parser,
        Graph.Types,
        Graph.VertexContext,
        Output.Trace,
        Pregel.Engine,
        Pregel.Env,
        Pregel.Pool,
        Pregel.Types
    default-language: GHC2021
    hs-source-dirs:   src

executable graphaskell
    import:           exe-warnings
    main-is:          Main.hs
    other-modules:    AppError
    build-depends:
        base,
        graphaskell,
        optparse-applicative
    default-language: GHC2021
    hs-source-dirs:   app

test-suite graphaskell-test
    import:           exe-warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        ParserTests,
        AlgorithmTests,
        TraceTests,
        Fixtures,
        SequentialEngine,
        TestSupport
    build-depends:
        base,
        containers,
        directory,
        HUnit,
        graphaskell
    default-language: GHC2021
    hs-source-dirs:   test
