cabal-version: 3.0
name:          graphaskell
version:       0.1.0.0
build-type:    Simple

common exe-warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

common lib-deps
    build-depends:
        base,
        async,
        containers,
        optparse-applicative,
        stm,
        transformers

library
    import:           lib-deps
    ghc-options:      -Wall
    exposed-modules:
        Algorithm.BFS,
        Algorithm.BellmanFord,
        Algorithm.Common,
        Algorithm.ConnectedComponents,
        Algorithm.Error,
        Algorithm.LabelPropagation,
        Algorithm.Log,
        Algorithm.Messages,
        Algorithm.PageRank,
        Algorithm.Result,
        Algorithm.Spec,
        Algorithm.State,
        Algorithm.Types,
        Cli.Error,
        Cli.Options,
        Graph.ParseError,
        Graph.Parser,
        Graph.Reading,
        Graph.Types,
        Graph.VertexContext,
        Output.Trace,
        Pregel.Engine,
        Pregel.Env,
        Pregel.Error,
        Pregel.Pool,
        Pregel.Superstep,
        Pregel.Types
    default-language: GHC2021
    hs-source-dirs:   src

executable graphaskell
    import:           exe-warnings
    main-is:          Main.hs
    other-modules:    AppError
    build-depends:
        base,
        graphaskell,
        mtl,
        optparse-applicative,
        transformers
    default-language: GHC2021
    hs-source-dirs:   app

test-suite graphaskell-test
    import:           exe-warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        ParserTests,
        AlgorithmTests,
        CommonTests,
        SuperstepTests,
        TraceTests,
        PropertyTests,
        Fixtures,
        SequentialEngine,
        TestSupport
    build-depends:
        base,
        containers,
        directory,
        HUnit,
        QuickCheck,
        graphaskell
    default-language: GHC2021
    hs-source-dirs:   test
